Header for index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
-
+    <header class="page__header">
+    <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
+     <nav class="main-nav">
+       <div class="main-nav__inner">
+       <a class="page-header__logo">
+          <img alt="Логотип приложения Пинк"   height="23" src="#" width="92">
+        </a>
+        <ul class="main-nav__wrapper nav-list">
+          <li class="nav-list__item"><a>Главная</a></li>
+          <li class="nav-list__item"><a href="gallery.html">Фотографии</a></li>
+          <li class="nav-list__item"><a href="form.html">Конкурс</a></li>
+          <li class="nav-list__item"><a href="https://htmlacademy.ru" target="_blank">HTML Academy</a></li>
+        </ul>
+        <button type="button" class="main-nav__toggle"></button>
+      </div>
+    </nav>
+    </header>
   </body>
 </html>
