--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="content-block">
     <section class="features">
       <h2 class="semantic-header">Наши преимущества</h2>
       <div class="features__desc">
