Corections in Index file and creating file systems for preprocessor

--- a/form.html
+++ b/form.html
@@ -47,26 +47,26 @@
           </div>
         </fieldset>
       </div>
-      <div class="container container--grey achivments">
-        <fieldset class="achivments__list-wrapper">
+      <div class="container container--grey achievement">
+        <fieldset class="achievement__list-wrapper">
           <legend class="form__text form__text--pink">Ваши безбашенные достижения в путешествии</legend>
-          <div class="achivments__list">
-            <div class="achivments__shark">
+          <div class="achievement__list">
+            <div class="achievement__shark">
               <input id="shark" name="achivment" type="checkbox" value="Сделал селфи с акулой"> <label for="shark">Сделал селфи с акулой</label>
             </div>
-            <div class="achivments__beach">
+            <div class="achievement__beach">
               <input id="beach" name="achivment" type="checkbox" value="Обгорел на пляже"> <label for="beach">Обгорел на пляже</label>
             </div>
-            <div class="achivments__norris">
+            <div class="achievement__norris">
               <input id="norris" name="achivment" type="checkbox" value="Видел Чака Норриса"> <label for="norris">Видел Чака Норриса</label>
             </div>
-            <div class="achivments__souvenires">
+            <div class="achievement__souvenires">
               <input id="souvenires" name="achivment" type="checkbox" value="Накупил сувениров"> <label for="souvenires">Накупил сувениров</label>
             </div>
-            <div class="achivments__tower">
+            <div class="achievement__tower">
               <input id="tower" name="achivmentr" type="checkbox" value="Ударжал башню"> <label for="tower">Удержал башню</label>
             </div>
-            <div class="achivments__destroy">
+            <div class="achievement__destroy">
               <input id="destroy" name="achivment" type="checkbox" value="Разгромил отель"> <label for="destroy">Разгромил отель</label>
             </div>
           </div>
