--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <p>Устали от серости мегаполиса?</p>
         <p>Нам есть что вам предложить!</p>
       </div>
-      <div class="features__wrap"></div>
+      <div class="features__wrap">
+        <p><b>Поднимает настроение</b> Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов</p>
+        <p><b>меняет мир вокруг</b> Сделайте снимок и украсте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+        <p><b>Заводит новых друзей</b> Ставьте лайки, комментируйте делитесь фотографиями с друзьями и заводите новых</p>
+      </div>
     </section>
     <section class="testimonials">
       <div class="slider">
