Some corections in gallery file and creating file systems for preprocessor

--- a/gallery.html
+++ b/gallery.html
@@ -35,12 +35,12 @@
     <section class="gallery">
       <p class="gallery__desc">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
       <div class="gallery__inner">
-        <article class="gallery__panoram">
-          <a href="#"><img alt="Фото Анны" class="gallery__panoram-pict" src="#"></a>
-          <div class="gallery__panoram-desc">
-            <p class="gallery__user-name">Анна <span class="gallery__user-time">(5 минут назад)</span></p>
-            <p class="gallery__user-text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-            <p class="gallery__panoram-like">Нравится: 215</p>
+        <article class="gallery-item gallery-item--panoram">
+          <a href="#"><img alt="Фото Анны" class="gallery-item__pict gallery-item__pict--panoram" src="#"></a>
+          <div class="gallery-item__desc gallery-item__desc--panoram">
+            <p class="gallery-item__user-name gallery-item__user-name--panoram">Анна <span class="gallery-item__user-time gallery-item__user-time--panoram">(5 минут назад)</span></p>
+            <p class="gallery-item__user-text gallery-item__user-text--panoram">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <p class="gallery-item__like gallery-item__like--panoram">Нравится: 215</p>
           </div>
         </article>
         <article class="gallery-item">
