--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Пинк</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -10,13 +11,14 @@
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
       <div class="main-nav__inner">
-        <a class="page-header__logo"><img alt="Логотип приложения Пинк" height="23" src="#" width="92"></a>
+        <a href="index.html" class="page-header__logo"><img alt="Логотип приложения Пинк" height="23" src="img/logo-pink-white-mobile.svg" width="92"></a>
+        <button class="main-nav__toggle" type="button"></button>
         <ul class="main-nav__wrapper nav-list">
           <li class="nav-list__item">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="nav-list__item">
-            <a href="gallery.html">Фотографии</a>
+            <a>Фотографии</a>
           </li>
           <li class="nav-list__item">
             <a href="form.html">Конкурс</a>
@@ -24,10 +26,10 @@
           <li class="nav-list__item">
             <a href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
           </li>
-        </ul><button class="main-nav__toggle" type="button"></button>
+        </ul>
       </div>
     </nav>
-    <div class="banner">
+    <div class="banner banner--gallery">
       <h2 class="banner__header">Фотографии пользователей</h2>
     </div>
   </header>
@@ -36,7 +38,7 @@
       <p class="gallery__desc">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
       <div class="gallery__inner">
         <article class="gallery-item gallery-item--panoram">
-          <a href="#"><img alt="Фото Анны" class="gallery-item__pict gallery-item__pict--panoram" src="#"></a>
+          <a href="#"><img alt="Фото Анны" class="gallery-item__pict gallery-item__pict--panoram" src="img/panorama-mobile@1x.jpg"></a>
           <div class="gallery-item__desc gallery-item__desc--panoram">
             <p class="gallery-item__user-name gallery-item__user-name--panoram">Анна <span class="gallery-item__user-time gallery-item__user-time--panoram">(5 минут назад)</span></p>
             <p class="gallery-item__user-text gallery-item__user-text--panoram">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -44,7 +46,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Левона" class="gallery-item__pict" src="#"></a>
+          <a href="#"><img alt="Фото Левона" class="gallery-item__pict" src="img/photo-car-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Левон <span class="gallery-item__user-time">(5 часов назад)</span></p>
             <p class="gallery-item__user-text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
@@ -52,7 +54,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Антона" class="gallery-item__pict" src="#"></a>
+          <a href="#"><img alt="Фото Антона" class="gallery-item__pict" src="img/photo-drumset-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Антон <span class="gallery-item__user-time">(12 часов назад)</span></p>
             <p class="gallery-item__user-text">Соседи будут рады!</p>
@@ -60,7 +62,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Бориса" class="gallery-item__pict" src="#"></a>
+          <a href="#"><img alt="Фото Бориса" class="gallery-item__pict" src="img/photo-window-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Борис <span class="gallery-item__user-time">(20 часов назад)</span></p>
             <p class="gallery-item__user-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -68,7 +70,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Сергея" class="gallery-item__pict" src="#"></a>
+          <a href="#"><img alt="Фото Сергея" class="gallery-item__pict" src="img/photo-fair-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Сергей <span class="gallery-item__user-time">(25 часов назад)</span></p>
             <p class="gallery-item__user-text">Самая кубанская в мире!</p>
@@ -76,7 +78,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Максима" class="gallery-item__pict" src="img/photo-5-mobile@1x.jpg" srcset="img/photo-5-mobile@2x.jpg 2x"></a>
+          <a href="#"><img alt="Фото Максима" class="gallery-item__pict" src="img/photo-pov-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Максим <span class="gallery-item__user-time">(40 часов назад)</span></p>
             <p class="gallery-item__user-text">Где снег-то?</p>
@@ -84,7 +86,7 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Надежды" class="gallery-item__pict" src="img/photo-6-mobile@1x.jpg" srcset="img/photo-6-mobile@2x.jpg 2x"></a>
+          <a href="#"><img alt="Фото Надежды" class="gallery-item__pict" src="img/photo-wing-mobile@1x.jpg"></a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Надежда <span class="gallery-item__user-time">(45 часов назад)</span></p>
             <p class="gallery-item__user-text">Всем GM и взаимные лайки!</p>
@@ -97,7 +99,7 @@
     </section>
     <section class="your-post">
       <div class="your-post__inner">
-        <img alt="Ваше фото" class="your-post__pict" height="374" src="#" width="280">
+        <img alt="Ваше фото" class="your-post__pict" height="374" src="img/photo-road-mobile@1x.jpg" width="280">
         <div class="user-area">
           <div class="filters">
             <div class="filters__inner">
