Перенос на другой компьютер

--- a/form.html
+++ b/form.html
@@ -39,10 +39,10 @@
       <div class="container name">
         <fieldset class="name__user-name">
           <div class="name__data">
-            <label for="user-surname">Фамилия:</label> <input id="user-surname" name="user-surname" placeholder="Укажите фамилию *" type="text">
+            <label for="user-surname">Фамилия:</label> <input id="user-surname" name="user-surname" placeholder="Укажите фамилию *" type="text" required>
           </div>
           <div class="name__data">
-            <label for="user-first-name">Имя:</label> <input id="user-first-name" name="user-first-name" placeholder="Введите ваше имя *" type="text">
+            <label for="user-first-name">Имя:</label> <input id="user-first-name" name="user-first-name" placeholder="Введите ваше имя *" type="text" required>
           </div>
           <div class="name__data">
             <label for="user-patronymic">Отчество:</label> <input id="user-patronymic" name="user-patronymic" placeholder="Ну и отчество тоже" type="text">
@@ -81,7 +81,7 @@
             <label class="phone" for="user-phone">Номер телефона</label> <input id="user-phone" name="contact" placeholder="Номер, пожалуйста" type="tel">
           </div>
           <div class="contacts__email">
-            <label class="mail" for="user-email">Адрес почты</label> <input id="user-email" name="contact" placeholder="Введите почту*" type="email">
+            <label class="mail" for="user-email">Адрес почты</label> <input id="user-email" name="contact" placeholder="Введите почту*" type="email" required>
           </div>
         </fieldset>
       </div>
