--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div class="banner">
       <div class="banner__hand-picture"></div>
       <div class="download">
-        <button class="btn btn--download-block">Скачать приложение</button>
+       <p class="download__call">Взгляните на жизнь иначе!</p>
+        <a class="btn btn--download">Скачать приложение</a>
         <div class="download__store-icons">
           <a href="#" class="download__store-icon download__store-icon--apple">AppStore</a>
           <a href="#" class="download__store-icon download__store-icon--android">GooglePlay</a>
@@ -53,6 +54,16 @@
         <p class="features__item features__item--mood"><b>Поднимает настроение</b> Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов</p>
         <p class="features__item features__item--world"><b>Меняет мир вокруг</b> Сделайте снимок и украсте его смайликом или текстовой подписью, чтобы усилить эффект</p>
         <p class="features__item features__item--friends"><b>Заводит новых друзей</b> Ставьте лайки, комментируйте делитесь фотографиями с друзьями и заводите новых</p>
+      </div>
+    </section>
+    <section class="research">
+       <div class="research__inner">
+       <div class="research__image"> <span>24</span></div>
+        <div class="research__desc">
+          <h2 class="research__header">Эффект<br> на 24 часа!</h2>
+          <p class="research__text">Британские ученые провели исследование и доказали, что положительный эффект <br>от использования приложения длится<br> целые сутки!</p>
+          <a href="#" class="research__link">Узнать больше об исследовании!</a>
+        </div>
       </div>
     </section>
     <section class="testimonials">
