Add div to centering banner content

--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
       </div>
     </nav>
     <div class="banner">
-      <div class="banner__hand-picture"></div>
-      <div class="download">
-       <p class="download__call">Взгляните на жизнь иначе!</p>
-        <a class="btn btn--download">Скачать приложение</a>
-        <div class="download__store-icons">
-          <a href="#" class="download__store-icon download__store-icon--apple">AppStore</a>
-          <a href="#" class="download__store-icon download__store-icon--android">GooglePlay</a>
-          <a href="#" class="download__store-icon download__store-icon--windows">Windows</a>
+      <div class="banner__inner-container">
+        <div class="banner__hand-picture"></div>
+        <div class="download">
+         <p class="download__call">Взгляните на жизнь иначе!</p>
+          <a class="btn btn--download">Скачать приложение</a>
+          <div class="download__store-icons">
+            <a href="#" class="download__store-icon download__store-icon--apple">AppStore</a>
+            <a href="#" class="download__store-icon download__store-icon--android">GooglePlay</a>
+            <a href="#" class="download__store-icon download__store-icon--windows">Windows</a>
+          </div>
+          <p class="download__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
-        <p class="download__desc">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
       </div>
     </div>
   </header>
