Adaptation for desktop

--- a/gallery.html
+++ b/gallery.html
@@ -129,7 +129,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__inner">
+    <div class="page-footer__inner page-footer__inner--gallery">
       <span class="page-footer__logo"></span>
       <div class="social-btn">
         <a class="social-btn__tw" href="#" title="Твиттер"></a> <a class="social-btn__fb" href="#" title="Фейсбук"></a> <a class="social-btn__yt" href="#" title="YouTube"></a>
