--- a/index.html
+++ b/index.html
@@ -115,20 +115,20 @@
           <tr>
             <td class="price-list__options">Розовый фильтр</td>
             <td class="price-list__condition"><span>Розовый фильтр</span></td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Розовый фильтр</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Розовый фильтр</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
           </tr>
           <tr>
             <td class="price-list__options">Смайлики</td>
             <td class="price-list__condition">Смайлики</td>
             <td class="price-list__icon"><img alt="Нет" class="price-list__logo" src="img/icon-no.svg"></td>
             <td class="price-list__condition">Смайлики</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Смайлики</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes.svg" width="31"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes-green.svg" width="31"></td>
           </tr>
           <tr>
             <td class="price-list__options">Комментарии</td>
@@ -137,7 +137,7 @@
             <td class="price-list__condition">Комментарии</td>
             <td class="price-list__icon"><img alt="Нет" class="price-list__logo" height="26" src="img/icon-no.svg" width="27"></td>
             <td class="price-list__condition">Комментарии</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes.svg" width="31"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes-green.svg" width="31"></td>
           </tr>
         </table>
         <div class="price-list__slider-controls">
