add scripts to html

--- a/gallery.html
+++ b/gallery.html
@@ -137,5 +137,7 @@
       <p class="page-footer__copyright">Разработано <a class="page-footer__academy-logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" title="HTML Academy"></a></p>
     </div>
   </footer>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
