--- a/form.html
+++ b/form.html
@@ -139,5 +139,7 @@
       </div>
     </div>
   </div>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
