--- a/index.html
+++ b/index.html
@@ -167,5 +167,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/picturefill.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
