Some another fixes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav class="main-nav">
       <div class="main-nav__inner">
         <a class="page-header__logo"><img alt="Логотип приложения Пинк" height="23" src="img/logo-pink-white-mobile.svg" width="92"></a>
-        <button class="main-nav__toggle--close" type="button"></button>
-        <ul class="main-nav__wrapper nav-list--close">
+        <button class="main-nav__toggle main-nav__toggle--close" type="button"></button>
+        <ul class="main-nav__wrapper nav-list nav-list--close">
           <li class="nav-list__item">
             <a>Главная</a>
           </li>
