--- a/gallery.html
+++ b/gallery.html
@@ -11,9 +11,15 @@
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
       <div class="main-nav__inner">
-        <a href="index.html" class="page-header__logo"><img alt="Логотип приложения Пинк" height="23" src="img/logo-pink-white-mobile.svg" width="92"></a>
-        <button class="main-nav__toggle" type="button"></button>
-        <ul class="main-nav__wrapper nav-list">
+        <a href="index.html" class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
+            <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
+            <img alt="Логотип приложения Пинк"   height="23" src="img/logo-pink-white-mobile.svg" width="92">
+          </picture>
+        </a>
+        <button class="main-nav__toggle main-nav__toggle--close" type="button"></button>
+        <ul class="main-nav__wrapper nav-list nav-list--close">
           <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
@@ -38,7 +44,13 @@
       <p class="gallery__desc">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
       <div class="gallery__inner">
         <article class="gallery-item gallery-item--panoram">
-          <a href="#"><img alt="Фото Анны" class="gallery-item__pict gallery-item__pict--panoram" src="img/panorama-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/panorama-desktop@1x.jpg 1x, img/panorama-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/panorama-tablet@1x.jpg 1x, img/panorama-tablet@2x.jpg 2x">
+              <img alt="Фото Анны" class=" gallery-item__pict gallery-item__pict--panoram" src="img/panorama-mobile@1x.jpg" srcset="img/panorama-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc gallery-item__desc--panoram">
             <p class="gallery-item__user-name gallery-item__user-name--panoram">Анна <span class="gallery-item__user-time gallery-item__user-time--panoram">(5 минут назад)</span></p>
             <p class="gallery-item__user-text gallery-item__user-text--panoram">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
@@ -46,7 +58,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Левона" class="gallery-item__pict" src="img/photo-car-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-car-desktop@1x.jpg 1x, img/photo-car-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-car-tablet@1x.jpg 1x, img/photo-car-tablet@2x.jpg 2x">
+              <img alt="Фото Левона" class="gallery-item__pict" src="img/photo-car-mobile@1x.jpg" srcset="img/photo-car-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Левон <span class="gallery-item__user-time">(5 часов назад)</span></p>
             <p class="gallery-item__user-text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
@@ -54,7 +72,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Антона" class="gallery-item__pict" src="img/photo-drumset-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-drumset-desktop@1x.jpg 1x, img/photo-drumset-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-drumset-tablet@1x.jpg 1x, img/photo-drumset-tablet@2x.jpg 2x">
+              <img alt="Фото Антона" class="gallery-item__pict" src="img/photo-drumset-mobile@1x.jpg" srcset="img/photo-drumset-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Антон <span class="gallery-item__user-time">(12 часов назад)</span></p>
             <p class="gallery-item__user-text">Соседи будут рады!</p>
@@ -62,7 +86,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Бориса" class="gallery-item__pict" src="img/photo-window-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-window-desktop@1x.jpg 1x, img/photo-window-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-window-tablet@1x.jpg 1x, img/photo-window-tablet@2x.jpg 2x">
+              <img alt="Фото Бориса" class="gallery-item__pict" src="img/photo-window-mobile@1x.jpg" srcset="img/photo-window-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Борис <span class="gallery-item__user-time">(20 часов назад)</span></p>
             <p class="gallery-item__user-text">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -70,7 +100,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Сергея" class="gallery-item__pict" src="img/photo-fair-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-fair-desktop@1x.jpg 1x, img/photo-fair-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-fair-tablet@1x.jpg 1x, img/photo-fair-tablet@2x.jpg 2x">
+              <img alt="Фото Сергея" class="gallery-item__pict" src="img/photo-fair-mobile@1x.jpg" srcset="img/photo-fair-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Сергей <span class="gallery-item__user-time">(25 часов назад)</span></p>
             <p class="gallery-item__user-text">Самая кубанская в мире!</p>
@@ -78,7 +114,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Максима" class="gallery-item__pict" src="img/photo-pov-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-pov-desktop@1x.jpg 1x, img/photo-pov-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-pov-tablet@1x.jpg 1x, img/photo-pov-tablet@2x.jpg 2x">
+              <img alt="Фото Сергея" class="gallery-item__pict" src="img/photo-pov-mobile@1x.jpg" srcset="img/photo-pov-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Максим <span class="gallery-item__user-time">(40 часов назад)</span></p>
             <p class="gallery-item__user-text">Где снег-то?</p>
@@ -86,7 +128,13 @@
           </div>
         </article>
         <article class="gallery-item">
-          <a href="#"><img alt="Фото Надежды" class="gallery-item__pict" src="img/photo-wing-mobile@1x.jpg"></a>
+          <a href="#">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/photo-wing-desktop@1x.jpg 1x, img/photo-wing-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/photo-wing-tablet@1x.jpg 1x, img/photo-wing-tablet@2x.jpg 2x">
+              <img alt="Фото Надежды" class="gallery-item__pict" src="img/photo-wing-mobile@1x.jpg" srcset="img/photo-wing-mobile@2x.jpg 2x">
+            </picture>
+          </a>
           <div class="gallery-item__desc">
             <p class="gallery-item__user-name">Надежда <span class="gallery-item__user-time">(45 часов назад)</span></p>
             <p class="gallery-item__user-text">Всем GM и взаимные лайки!</p>
@@ -99,7 +147,11 @@
     </section>
     <section class="your-post">
       <div class="your-post__inner">
-        <img alt="Ваше фото" class="your-post__pict" height="374" src="img/photo-road-mobile@1x.jpg" width="280">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/photo-road-desktop@1x.jpg 1x, img/photo-road-desktop@2x.jpg 2x">
+          <source media="(min-width: 660px)" srcset="img/photo-road-tablet@1x.jpg 1x, img/photo-road-tablet@2x.jpg 2x">
+          <img class="your-post__pict" alt="Ваше фото"  src="img/photo-road-mobile@1x.jpg" width="280" height="374" srcset="img/photo-road-mobile@2x.jpg 2x">
+        </picture>
         <div class="user-area">
           <div class="filters">
             <div class="filters__inner">
