Probably prepare for check

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
-      <div class="main-nav__inner">
+      <div class="main-nav__inner main-nav__inner--colored">
         <a class="page-header__logo">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
@@ -18,8 +18,8 @@
             <img alt="Логотип приложения Пинк"   height="23" src="img/logo-pink-white-mobile.svg" width="92">
           </picture>
         </a>
-        <button class="main-nav__toggle main-nav__toggle--close" type="button"></button>
-        <ul class="main-nav__wrapper nav-list nav-list--close">
+        <button class="main-nav__toggle main-nav__toggle--open" type="button"></button>
+        <ul class="main-nav__wrapper nav-list">
           <li class="nav-list__item">
             <a>Главная</a>
           </li>
@@ -39,7 +39,7 @@
       <div class="banner__inner-container">
         <div class="banner__hand-picture"></div>
         <div class="download">
-         <p class="download__call">Взгляните на жизнь иначе!</p>
+          <p class="download__call">Взгляните на жизнь иначе!</p>
           <a class="btn btn--download">Скачать приложение</a>
           <div class="download__store-icons">
             <a href="#" class="download__store-icon download__store-icon--apple">AppStore</a>
@@ -67,8 +67,8 @@
       </div>
     </section>
     <section class="research">
-       <div class="research__inner">
-       <div class="research__image"> <span>24</span></div>
+      <div class="research__inner">
+        <div class="research__image"> <span>24</span></div>
         <div class="research__desc">
           <h2 class="research__header">Эффект<br> на 24 часа!</h2>
           <p class="research__text">Британские ученые провели исследование и доказали, что положительный эффект <br>от использования приложения длится<br> целые сутки!</p>
