--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
-      <div class="main-nav__inner">
+      <div class="main-nav__inner main-nav__inner--colored">
         <a href="index.html" class="page-header__logo">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
@@ -18,8 +18,8 @@
             <img alt="Логотип приложения Пинк"   height="23" src="img/logo-pink-white-mobile.svg" width="92">
           </picture>
         </a>
-        <button class="main-nav__toggle main-nav__toggle--close" type="button"></button>
-        <ul class="main-nav__wrapper nav-list nav-list--close">
+        <button class="main-nav__toggle main-nav__toggle--open" type="button"></button>
+        <ul class="main-nav__wrapper nav-list">
           <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
@@ -131,14 +131,14 @@
         <p class="pop-up__header">Что-то пошло не так!</p>
         <p class="pop-up__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
-      <div class="pop-up__btn">
+      <div class="pop-up__btn pop-up__btn--on-white">
         <button class="btn btn--send close-btn">ок</button>
       </div>
     </div>
     <div class="pop-up__success">
       <div class="pop-up__wrap">
         <p class="pop-up__header">Ваша заявка отправлена!</p>
-        <p class="pop-up__text">Спасибо за участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
+        <p class="pop-up__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
       </div>
       <div class="pop-up__btn">
         <button class="btn btn--send close-btn">Закрыть окно</button>
