--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
-      <div class="main-nav__inner">
+      <div class="main-nav__inner main-nav__inner--colored">
         <a href="index.html" class="page-header__logo">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
@@ -18,8 +18,8 @@
             <img alt="Логотип приложения Пинк"   height="23" src="img/logo-pink-white-mobile.svg" width="92">
           </picture>
         </a>
-        <button class="main-nav__toggle main-nav__toggle--close" type="button"></button>
-        <ul class="main-nav__wrapper nav-list nav-list--close">
+        <button class="main-nav__toggle main-nav__toggle--open" type="button"></button>
+        <ul class="main-nav__wrapper nav-list">
           <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
