Some another fixes

--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
           <li class="nav-list__item">
             <a href="gallery.html">Фотографии</a>
           </li>
-          <li class="nav-list__item">
+          <li class="nav-list__item nav-list__item--active">
             <a>Конкурс</a>
           </li>
           <li class="nav-list__item">
