--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
       <div class="main-nav__inner main-nav__inner--colored">
-        <a class="page-header__logo">
+        <a class="page-header__logo" tabindex="-1">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
             <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
@@ -20,7 +20,7 @@
         </a>
         <button class="main-nav__toggle main-nav__toggle--open" type="button"></button>
         <ul class="main-nav__wrapper nav-list">
-          <li class="nav-list__item">
+          <li class="nav-list__item nav-list__item--active">
             <a>Главная</a>
           </li>
           <li class="nav-list__item">
