--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <h1 class="semantic-header">Мобильное приложение &#xab;PINK&#xbb;</h1>
     <nav class="main-nav">
       <div class="main-nav__inner main-nav__inner--colored">
-        <a href="index.html" class="page-header__logo">
+        <a href="index.html" class="page-header__logo" tabindex="-1">
           <picture>
             <source media="(min-width: 1200px)" srcset="img/logo-pink-white-desktop.svg">
             <source media="(min-width: 660px)" srcset="img/logo-pink-white-tablet.svg">
@@ -23,7 +23,7 @@
           <li class="nav-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="nav-list__item">
+          <li class="nav-list__item nav-list__item--active">
             <a>Фотографии</a>
           </li>
           <li class="nav-list__item">
