--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
           <tr>
             <td class="price-list__options">Розовый фильтр</td>
             <td class="price-list__condition"><span>Розовый фильтр</span></td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" width="31" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Розовый фильтр</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" width="31" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Розовый фильтр</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" width="31" src="img/icon-yes-green.svg"></td>
           </tr>
           <tr>
             <td class="price-list__options">Смайлики</td>
             <td class="price-list__condition">Смайлики</td>
-            <td class="price-list__icon"><img alt="Нет" class="price-list__logo" src="img/icon-no.svg"></td>
+            <td class="price-list__icon"><img alt="Нет" class="price-list__logo" src="img/icon-no.svg" height="26" width="27"></td>
             <td class="price-list__condition">Смайлики</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" src="img/icon-yes-green.svg"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" width="31" src="img/icon-yes-green.svg"></td>
             <td class="price-list__condition">Смайлики</td>
-            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes-green.svg" width="31"></td>
+            <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" width="31" src="img/icon-yes-green.svg"></td>
           </tr>
           <tr>
             <td class="price-list__options">Комментарии</td>
             <td class="price-list__condition">Комментарии</td>
             <td class="price-list__icon"><img alt="Нет" class="price-list__logo" height="26" src="img/icon-no.svg" width="27"></td>
             <td class="price-list__condition">Комментарии</td>
-            <td class="price-list__icon"><img alt="Нет" class="price-list__logo" height="26" src="img/icon-no.svg" width="27"></td>
+            <td class="price-list__icon"><img alt="Нет" class="price-list__logo" height="26" width="27" src="img/icon-no.svg"></td>
             <td class="price-list__condition">Комментарии</td>
             <td class="price-list__icon"><img alt="Да" class="price-list__logo" height="21" src="img/icon-yes-green.svg" width="31"></td>
           </tr>
@@ -176,6 +176,6 @@
     </div>
   </footer>
   <script src="js/picturefill.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
