--- a/form.html
+++ b/form.html
@@ -146,6 +146,6 @@
     </div>
   </div>
   <script src="js/picturefill.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
