--- a/gallery.html
+++ b/gallery.html
@@ -190,6 +190,6 @@
     </div>
   </footer>
   <script src="js/picturefill.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/menu.js"></script>
 </body>
 </html>
